# generate_git_version_header

./: CMakeLists.txt  README.md  main.cpp
cmake/: GitVersionHeader.cmake
